--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -24,6 +24,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
