--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.altfregistry</groupId>
     <artifactId>backend</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>utilsModule</module>
+        <module>entitiesModule</module>
+        <module>daoModule</module>
+        <module>serviceModule</module>
+        <module>applicationExceptionsModule</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -29,7 +37,6 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>9.0.0</version>
         </dependency>
-
     </dependencies>
 
 </project>
