--- a/application/backend/serviceModule/pom.xml
+++ b/application/backend/serviceModule/pom.xml
@@ -18,6 +18,24 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>org.altfregistry</groupId>
+            <artifactId>entitiesModule</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.altfregistry</groupId>
+            <artifactId>daoModule</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.altfregistry</groupId>
+            <artifactId>entitiesModule</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
