--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -14,6 +14,8 @@
         <module>daoModule</module>
         <module>serviceModule</module>
         <module>applicationExceptionsModule</module>
+        <module>Main</module>
+
     </modules>
 
     <properties>
